random colors each time; bug with quoteText visibility; css visible > .hide()

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body{
   }
 
   #left {
-    background: linear-gradient(#003399 , #0099cc);
     justify-content: center;
     flex: 1;
     display: flex;
